--- a/package.json
+++ b/package.json
@@ -1,23 +1,37 @@
 {
-  "name": "api-zingmp3",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "engines": {
-    "node": "14.x"
+  "author": "cuong <front.cuong@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^1.18.3"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.35.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "cros": "^1.0.1",
+    "dotenv": "^16.0.3",
+    "dotenvr": "^0.2.0",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.17.3",
+    "JSON2": "^0.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "mysql2": "^3.2.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "pug": "^2.0.3",
+    "sequelize": "^5.0.0-beta.11",
+    "zingmp3-api-full": "^1.0.14"
   },
   "scripts": {
     "start": "nodemon index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "zingmp3-api-full": "^1.0.14"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
   }
 }
